--- a/assets/styl/fathom.styl
+++ b/assets/styl/fathom.styl
@@ -3,9 +3,18 @@
 	transition 0.3s all cubic-bezier(0.250, 0.460, 0.450, 0.940)
 }
 
-.fm-active {
-	transform scale(0.9)	
+.fm-document {
 	@extends .fm-transitions
+	body {
+		background-color white
+	}
+	width 100%
+	height 100%
+}
+
+.fm-document-active {
+	transform scale(0.9)
+	background-color #222;
 }
 
 .fm-cover {
@@ -19,28 +28,31 @@
 	opacity 0
 	background rgba(0, 0, 0, 0.5)
 	@extends .fm-transitions
-	filter blur(2px)
 }
 
 .fm-cover-active {
 	@extends .fm-cover
 	visibility visible
 	opacity 1
-	@extends .fm-transitions
 }
 
 .fm-el {	
 	position fixed
-	z-index 2
-	left 50%
 	top 50%
+	left 50%
+	z-index 2
 	visibility hidden
 	opacity 0
-	box-shadow 0px 0px 60px rgba(0, 0, 0, 0.3)
-	border-radius 3px
+	box-shadow 0 0 60px rgba(0, 0, 0, 0.3)
+	border-radius 5px
 	box-sizing border-box
 	transform scale(0.8)
-	filter none !important
+	background-color white
+	@extends .fm-transitions
+}
+
+.fm-blur {
+	filter blur(2px)
 }
 
 .fm-el-active {
@@ -48,5 +60,4 @@
 	visibility visible
 	opacity 1
 	transform scale(1.1111)
-	@extends .fm-transitions
 }
