--- a/assets/styl/fathom.styl
+++ b/assets/styl/fathom.styl
@@ -18,6 +18,7 @@
 }
 
 .fm-cover {
+	backface-visibility hidden
 	position fixed
 	width 100%
 	height 100%
@@ -37,6 +38,7 @@
 }
 
 .fm-el {
+	backface-visibility hidden
 	position fixed
 	top 40%
 	left 50%
